<resources>
    <string name="empty_string"> </string>
    <string name="enter_text">Please enter text here</string>
    <string name="app_name">We got the Moves!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_training">Training</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_settings">Settings</string>
    <string name="title_statistics">Statistics</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="copy">copy</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_workout_title">Delete Workout: %s</string>
    <string name="delete_workout_message">Are you sure that you want to delete this item?</string>
    <string name="copy_workout_title">Copy Workout: %s</string>
    <string name="copy_workout_message">Are you sure that you want to copy this item?</string>
    <string name="set_workout_title">Set title of Workout: %s</string>
    <string name="set_exercise_amount">Set amount of Exercise: %s</string>
    <string name="add">add</string>
    <string name="select_exercises">Select any Exercises for Workout: %s</string>
    <string name="no_items">No items found</string>
    <string name="new_workout">Add new Workout</string>
    <string name="untitled">Untitled</string>
    <string name="expand">expand</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="instruction_title">Instruction of Exercise: %s</string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string name="repetitions">Repetitions</string>
    <string name="duration">Duration\n[hh:mm:ss]</string>
    <string name="hh_mm_ss">[hh:mm:ss]</string>
    <string name="yy_mm_dd_hh_mm_ss">[yy:MM:dd:hh:mm:ss]</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="statistics_title_calorie_burn">Today\'s Calorie Burn</string>
    <string name="your_calorie_level">Your calorie goal: </string>
    <string name="weekly_training_results">Weekly Training Results</string>
    <string name="your_total_training_time">Your total training time:</string>
    <string name="your_week_s_avg_training_time">Weekly Ø-training time per day:</string>
    <string name="default_total_time">00:00:00:00:00:00</string>
    <string name="default_time">00:00:00</string>
    <string name="cw_zero">0000 CW00</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="exercise_analysis">Exercise Analysis</string>
    <string name="total_duration_hours">Total duration [hours]</string>
    <string name="total_number_reps">Total # of repetitions</string>
    <string name="average_secs_repetition">Ø-time per repetition [secs/#]</string>
    <string name="weekly_total_time">Weekly total time:</string>
    <string name="dd_hh_mm_ss">[dd:hh:mm:ss]</string>
    <string name="total_week_time">00:00:00:00</string>
    <string name="profile_settings">Profile settings</string>
    <string name="enter_username_here">Enter username here</string>
    <string name="save">Save</string>
    <string name="enter_age_here">Enter age here</string>
    <string name="enter_weight_here">Enter weight in [kg] here</string>
    <string name="enter_height_here">Enter height in [meter] here</string>
    <string name="enter_daily_calories_goal">Enter daily calories goal</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height">Height [m]</string>
    <string name="weight">Weight [kg]</string>
    <string name="age">Age [year]</string>
    <string name="calorie_goal">Calorie goal [kcal]</string>
    <string name="gender">Gender</string>
    <string name="camera">Camera</string>
    <string name="tts">Voice Feedback</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="last_workouts">Last Workouts</string>
    <string name="all_workouts">All Workouts</string>
    <string name="recent_trainings">Recent Trainings</string>
    <string name="all_trainings">All Trainings</string>
    <string name="recorded_trainings">Recorded Workouts</string>
    <string name="stop">STOP</string>
    <string name="start">Start</string>
    <string name="time_between_exercise">Pause Time [sec]</string>
    <string name="enter_time_between_exercise">Enter time</string>
    <string name="finish_activity">finish_activity</string>
    <string name="end_tutorial">End Tutorial</string>
    <string name="title_tutorial_dashboard">Dashboard Tutorial</string>
    <string name="title_tutorial_training">Training Tutorial</string>
    <string name="title_tutorial_workouts">Workout Tutorial</string>
    <string name="title_tutorial_statistics">Statistics Tutorial</string>
    <string name="title_tutorial_settings">Settings Tutorial</string>
    <string name="tutorial">tutorial</string>
    <string name="is_accessed">is_accessed</string>
    <string name="empty_workout_error">"You are trying to start an empty workout. Please press cancel!"</string>
    <string name="please_grant_camera_access">Please grant camera access</string>
    <string name="training_paused">Training Paused</string>
    <string name="continue_msg">Continue</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="all_correct">all correct</string>
    <string name="exercise">exercise</string>
    <string name="_0_x">0 / X</string>

</resources>