<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_tutorial_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_tutorial_training"
        android:icon="@drawable/ic_training_black_24dp"
        android:title="@string/title_training" />

    <item
        android:id="@+id/navigation_tutorial_workouts"
        android:icon="@drawable/ic_workouts_black_24dp"
        android:title="@string/title_workouts" />

    <item
        android:id="@+id/navigation_tutorial_statistics"
        android:icon="@drawable/ic_statistics_black_24dp"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_tutorial_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>