<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_statistics_weekly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sg2022.we_got_the_moves.ui.statistics.StatisticsFragment">

        <ScrollView
            android:id="@+id/scrollview_statistics_weekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/enter_text"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_scrollview_statistics_weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_header_total_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/yy_mm_dd_hh_mm_ss"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textview_value_total_statistics"
                    app:layout_constraintTop_toBottomOf="@+id/textview_title_statistics_weekly" />

                <TextView
                    android:id="@+id/textview_header_total_week_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/dd_hh_mm_ss"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textview_value_total_week_statistics_weekly"
                    app:layout_constraintTop_toBottomOf="@+id/textview_value_total_statistics" />

                <TextView
                    android:id="@+id/textview_header_average_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/hh_mm_ss"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textview_value_average_statistics_weekly"
                    app:layout_constraintTop_toBottomOf="@+id/textview_value_total_week_statistics_weekly" />

                <TextView
                    android:id="@+id/textview_value_total_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeTextType="none"
                    android:fontFamily="serif"
                    android:hint="@string/default_total_time"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:text="@string/default_total_time"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_header_total_statistics"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textview_value_total_week_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeTextType="none"
                    android:fontFamily="serif"
                    android:hint="@string/total_week_time"
                    android:importantForAutofill="no"
                    android:maxLines="1"
                    android:text="@string/total_week_time"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_header_total_week_statistics"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textview_text_total_statistics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/your_total_training_time"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_header_total_statistics" />

                <TextView
                    android:id="@+id/textview_text_average_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/your_week_s_avg_training_time"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_header_average_statistics_weekly" />

                <TextView
                    android:id="@+id/textview_text_total_week_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/weekly_total_time"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_header_total_week_statistics" />

                <TextView
                    android:id="@+id/textview_value_average_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="serif"
                    android:hint="@string/empty_string"
                    android:importantForAutofill="no"
                    android:text="@string/default_time"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_header_average_statistics_weekly"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textview_title_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/weekly_training_results"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart_statistics_weekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/white"
                    android:isScrollContainer="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_value_average_statistics_weekly"
                    app:layout_constraintWidth="match_parent">

                </com.github.mikephil.charting.charts.BarChart>

                <TextView
                    android:id="@+id/textview_calender_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/cw_zero"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bar_chart_statistics_weekly" />

                <ImageButton
                    android:id="@+id/imagebtn_calender_right_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_arrow_right_black_24dp"
                    android:backgroundTint="@color/sg_design_green"
                    android:contentDescription="@string/right"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textview_calender_statistics_weekly"
                    app:layout_constraintStart_toEndOf="@+id/textview_calender_statistics_weekly"
                    app:layout_constraintTop_toTopOf="@+id/textview_calender_statistics_weekly"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/imagebtn_calender_left_statistics_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_arrow_left_black_24dp"
                    android:backgroundTint="@color/sg_design_green_transparent"
                    android:contentDescription="@string/left"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textview_calender_statistics_weekly"
                    app:layout_constraintEnd_toStartOf="@+id/textview_calender_statistics_weekly"
                    app:layout_constraintTop_toTopOf="@+id/textview_calender_statistics_weekly"
                    tools:ignore="SpeakableTextPresentCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>