<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_statistics_daily"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sg2022.we_got_the_moves.ui.statistics.StatisticsFragment">

    <ScrollView
        android:id="@+id/scrollview_statistics_daily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/enter_text"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_content_statistics_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_title_daily_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/statistics_title_calorie_burn"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_calories_label_statistics_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/your_calorie_level"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_title_daily_statistics" />

            <TextView
                android:id="@+id/textview_calories_value_daily_statistics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="serif"
                android:hint="@string/empty_string"
                android:importantForAutofill="no"
                android:text="@string/default_time"
                android:textAlignment="viewStart"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_title_daily_statistics"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/piechart_statistics_daily"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48dp"
                android:isScrollContainer="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_calories_value_daily_statistics"
                app:layout_constraintWidth="match_parent">

            </com.github.mikephil.charting.charts.PieChart>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>